# CurricuLLM

./: .env.example  .gitignore  Dicas para Engenharia de Prompt.md  README.md  config.py  curriculum.py  job_description.example.json  profile.html  pyproject.toml
guidelines/: diretrizes_curriculum.md  diretrizes_humanizacao.md
