[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curricullm"
version = "1.0.0"
description = "Gerador de currículo inteligente com IA usando LLM (Large Language Model)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "Seu Nome", email = "seu.email@example.com"}
]
keywords = ["curriculum", "cv", "ai", "llm", "job-matching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: Creative Commons :: Attribution-NonCommercial 4.0 International",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
]
dependencies = [
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/maiarar/CurricuLLM"
Repository = "https://github.com/maiarar/CurricuLLM.git"
Issues = "https://github.com/maiarar/CurricuLLM/issues"